kubernetes/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ethiocode-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ethiocode-database
  template:
    metadata:
      labels:
        app: ethiocode-database
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
