kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ethiocode-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ethiocode-redis
  template:
    metadata:
      labels:
        app: ethiocode-redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
